# pihole-controller

./: .editorconfig  .gitignore  CONTRIBUTING.md  Makefile  README.md  meson.build  meson_options.txt
.devcontainer/: Dockerfile  devcontainer.json
data/: com.avojak.piholecontroller.appdata.xml.in.in  com.avojak.piholecontroller.desktop.in.in  com.avojak.piholecontroller.gresource.xml.in  com.avojak.piholecontroller.gschema.xml.in  meson.build
data/stylesheets/: style.css
flatpak/: com.avojak.piholecontroller.yml
po/extra/: POTFILES
src/: Application.vala  MainWindow.vala  config.vala.in  meson.build
src/Core/: Client.vala  PiholeRestClient.vala  SQLClient.vala  SecretManager.vala  ServerConnection.vala  ServerConnectionManager.vala  ServerDatabase.vala  ServerRepository.vala  Settings.vala
src/Models/: GravityLastUpdatedData.vala  ReplyData.vala  ServerConnectionDetails.vala  ServerDetails.vala  ServerPrivacyLevel.vala  ServerStatus.vala  ServerVersion.vala  SummaryData.vala  TimeSeriesData.vala  TopItems.vala
src/Views/: HomeView.vala  WelcomeView.vala
src/Views/Preferences/: GeneralPreferencePage.vala  ServersPreferencePage.vala
src/Widgets/: PreferencesDialog.vala  ServerHomeGroup.vala  ServerPreferenceGroup.vala  ServerStatusIcon.vala  StatisticTile.vala
